--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,13 @@
 </head>
 
 <body>
-  <p> {% if s.logged %} You are logged in already!  </p>
+  <!--<p> {% if s.logged %} You are logged in already!  </p>
   <form action="/logout">
     <input type="submit" value="Logout">
   </form>
  {% else %}<p>You are not logged in! :( </p> 
   {{error}}
+  -->
   <form action="/login" method="POST" >
     Username: <input type="text" name="username">
     Password: <input type="text" name="password">
