--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
     Username: <input type="text" name="username">
     Password: <input type="text" name="password">
     <input type="submit" name="button" value="login">
+     <input type="submit" name="button" value="signup">
   </form>
   {% endif %}
 </body>
