--- a/templates/login.html
+++ b/templates/login.html
@@ -5,16 +5,15 @@
 </head>
 
 <body>
-  <!--<p> {% if s.logged %} You are logged in already!  </p>
+  <p> {% if s.logged %} You are logged in already!  </p>
   <form action="/logout">
     <input type="submit" value="Logout">
   </form>
  {% else %}<p>You are not logged in! :( </p> 
   {{error}}
-  -->
   <form action="/login" method="POST" >
     Username: <input type="text" name="username">
-    Password: <input type="text" name="password">
+    Password: <input type="text" name="password"> <br>
     <input type="submit" name="button" value="login">
      <input type="submit" name="button" value="signup">
   </form>
