--- a/templates/viewsubmit.html
+++ b/templates/viewsubmit.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head lang="en">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -37,7 +38,7 @@
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="Next Section"><span class="icon icon-home"></span> <span class="text">Home</span></a></li>
-					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">About us</span></a></li>
+					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">View Your essays</span></a></li>
 				</ul>
 				<div class="row">
 					<div class="col-sm-2 active-menu"></div>
@@ -77,7 +78,7 @@
 			<div id="home-row-2" class="row clearfix">
 				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4"><img src="images/s02.png"></div><span>Earn Tinder</span></div>
 				<div class="col-12 col-sm-4"></div>
-				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5"><img src="images/s03.png"></div><span>Your Essays</span></div>
+				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5"><img src="images/s03.png"></div><span>About</span></div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide1 -->
@@ -87,14 +88,33 @@
 	<div class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-thin">See us <span class="font-semibold">at work</span></div>
+				<div class="col-12 font-thin">Edit <span class="font-semibold">your essays</span></div>
 			</div><!-- /row -->
 			<div class="row line-row">
 				<div class="hr">&nbsp;</div>
 			</div><!-- /row -->
 			<div class="row subtitle-row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-10 font-light">Our Site was created by 3 Naive Highschool boys as a Softwate Development Final Project.</div>
+				<div class="col-12 col-sm-10 font-light">
+Edit your essays here!<br><br>
+<form>
+<p style="font-size:12px">
+Submit a new essay in the below box!
+ <textarea rows="60" cols="117">
+submit new essay here!
+</textarea><br>
+ 		<input type="submit" value="Submit New Essay">
+		35 tinder(make this work with javascript)	
+<br><br><br><br>
+<textarea rows="60" cols="117">
+This is another essay hehehehehorf
+</textarea><br>
+		<input type="submit" value="Submit New Edit">
+		<input type="submit" value="Revert">
+</p>
+</form>
+
+</div>
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 			<div class="row content-row">
