working login change

--- a/templates/home.html
+++ b/templates/home.html
@@ -61,11 +61,11 @@
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
 				<div>
-					<form>
+					<form action="/" method ="POST">
 					Username: <input type="text" name="username">
   					Password: <input type="text" name="password">
-  					<input type="submit" value="login">
-					<input type="submit" value="signup">
+  					<input type="submit" name="button" value="login">
+					<input type="submit" name="button" value="signup">
 					</form>
 				</div>
 				<div class="col-12">
