--- a/templates/home.html
+++ b/templates/home.html
@@ -60,6 +60,7 @@
 	<div class="slide story" id="slide-1" data-slide="1">
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
+			  {% if not s.logged %}
 				<div>
 					<form action="/" method ="POST">
 					Username: <input type="text" name="username">
@@ -67,7 +68,9 @@
   					<input type="submit" name="button" value="login">
 					<input type="submit" name="button" value="signup">
 					</form>
+					<h4 class="font-thin">{{error}}{% endif %}<span class="font-semibold"></span></h4>
 				</div>
+			{% endif %}
 				<div class="col-12">
 					<h1 class="font-semibold">ERECTI <span class="font-thin">FIRE</span></h1>
 					<h4 class="font-thin">{% if s.logged %} Logged in as {{s.username}}{% else %}Please Log In{% endif %}<span class="font-semibold"></span></h4>
