--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
   	  <input type="submit" name="button" value="login">
 	  <input type="submit" name="button" value="signup">
 	</form>
-	<h4 class="font-thin">{{error}}{% endif %}<span class="font-semibold"></span></h4>
+	<h4 class="font-thin">{{error}}<span class="font-semibold"></span></h4>
       </div>
       {% endif %}
       <div class="col-12">
