--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
     <meta property="og:title" content="">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='jquery.fancybox-v=2.1.5.css')}}" type="text/css" media="screen">
     <link rel="stylesheet" href="{{url_for('static', filename='font-awesome.min.css')}}" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">	
