--- a/templates/viewsubmit.html
+++ b/templates/viewsubmit.html
@@ -76,9 +76,9 @@
 				</div><!-- /col-12 -->
 			</div><!-- /row -->
 			<div id="home-row-2" class="row clearfix">
-				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4"><img src="images/s02.png"></div><span>Earn Tinder</span></div>
-				<div class="col-12 col-sm-4"></div>
-				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5"><img src="images/s03.png"></div><span>About</span></div>
+				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4"><img src="{{url_for('static', filename='images/s02.png')}}"></div><span>Earn Tinder</span></div>
+      <div class="col-12 col-sm-4"></div>
+      <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5"><img src="{{url_for('static', filename='images/s03.png')}}"></div><span>About</span></div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide1 -->
