--- a/templates/home.html
+++ b/templates/home.html
@@ -50,13 +50,16 @@
       {% endif %}
       {% if s.logged %}
       <div>
-	Submit your essay!
+	Hi, {{s.logged}}!
+	Your firewood: {{firewood}}
+	Submit your essay! <br>
 	<form method ="POST">
-	  Essay title: <input type="text" name="title">
-	  Subject area of essay: <input type="text" name="description">
-	  Essay content: <input type="text" name="essay">
-  	  <input type="submit" name="button" value="Submit">
+	  Essay title: <input type="text" name="title"><br>
+	  Subject area of essay: <input type="text" name="description"><br>
+	  Essay content: <input type="text" name="essay"><br>
+  	  <input type="submit" name="button" value="Submit"><br>
 	</form>
+	Your previous essays:
 	<h4 class="font-thin">{{error}}<span class="font-semibold"></span></h4>
       </div>
       {% endif %}
