--- a/templates/editothers.html
+++ b/templates/editothers.html
@@ -98,6 +98,7 @@
 				<div class="col-12 col-sm-10 font-light">
 Edit your essays here!<br><br>
 <form>
+<iframe width="850" height="1200" src="https://docs.google.com/document/d/1wTzq934fdkFW5KuZAb85lenzolapL221RqMrSe-m3Ag/edit?usp=sharing"></iframe>
 <p style="font-size:12px">
  <textarea rows="60" cols="117">
 This is an essay blablablabla hehehehe
