--- a/templates/editothers.html
+++ b/templates/editothers.html
@@ -96,22 +96,16 @@
 			<div class="row subtitle-row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-10 font-light">
-Edit your essays here!<br><br>
+Edit other peoples essays and submit them for Tinder here!<br><br>
 <form>
 <iframe width="850" height="1200" src="https://docs.google.com/document/d/1wTzq934fdkFW5KuZAb85lenzolapL221RqMrSe-m3Ag/edit?usp=sharing"></iframe>
-<p style="font-size:12px">
- <textarea rows="60" cols="117">
-This is an essay blablablabla hehehehe
-</textarea><br>
- 		<input type="submit" value="Submit New Edit">
-		<input type="submit" value="Revert">	
+<br>
+ 		<input type="submit" value="Submit">	
 <br><br><br><br>
-<textarea rows="60" cols="117">
-This is another essay hehehehehorf
+<iframe width="850" height="1200" src="https://docs.google.com/document/d/1wTzq934fdkFW5KuZAb85lenzolapL221RqMrSe-m3Ag/edit?usp=sharing"></iframe>
+<br>
 </textarea><br>
-		<input type="submit" value="Submit New Edit">
-		<input type="submit" value="Revert">
-</p>
+		<input type="submit" value="Submit">
 </form>
 
 </div>
