--- a/templates/viewsubmit.html
+++ b/templates/viewsubmit.html
@@ -88,7 +88,7 @@
 	<div class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-thin">Edit <span class="font-semibold">your essays</span></div>
+				<div class="col-12 font-thin">Submit and View <span class="font-semibold">Your Essays</span></div>
 			</div><!-- /row -->
 			<div class="row line-row">
 				<div class="hr">&nbsp;</div>
@@ -96,21 +96,18 @@
 			<div class="row subtitle-row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-10 font-light">
-Edit your essays here!<br><br>
+Share a google documents essay link here with rights to comment or edit!<br><br>
 <form>
 <p style="font-size:12px">
-Submit a new essay in the below box!
- <textarea rows="60" cols="117">
-submit new essay here!
+ <textarea rows="1" cols="117">
+submit your new essay link here!
 </textarea><br>
  		<input type="submit" value="Submit New Essay">
-		35 tinder(make this work with javascript)	
+		30 tinder	
 <br><br><br><br>
-<textarea rows="60" cols="117">
-This is another essay hehehehehorf
-</textarea><br>
-		<input type="submit" value="Submit New Edit">
-		<input type="submit" value="Revert">
+<iframe width="850" height="1200" src="https://docs.google.com/document/d/1wTzq934fdkFW5KuZAb85lenzolapL221RqMrSe-m3Ag/edit?usp=sharing"></iframe>
+<br>
+		<input type="submit" value="Submit New Essay">
 </p>
 </form>
 
