--- a/templates/home.html
+++ b/templates/home.html
@@ -50,8 +50,8 @@
       {% endif %}
       {% if s.logged %}
       <div>
-	Hi, {{s.logged}}!
-	Your firewood: {{f}}
+	Hi, {{s.username}}! <br>
+	Your firewood: {{f}} <br>
 	Submit your essay! <br>
 	<form method ="POST">
 	  Google Drive Link: <input type="text" name="link"><br>
