--- a/templates/editothers.html
+++ b/templates/editothers.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="col-12">
 					<h1 class="font-semibold">ERECTI <span class="font-thin">FIRE</span></h1>
-					<h4 class="font-thin"> Logged in as Jacoby149<span class="font-semibold"></span></h4>
+					<h4 class="font-thin"> {% if s.logged %} Logged in as {{s.username}}{% else %}Please Log In{% endif %}<span class="font-semibold"></span></h4>
 					<br>
 				</div><!-- /col-12 -->
 			</div><!-- /row -->
