--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
     </div><!-- /row -->
     <div class="row subtitle-row">
       <div class="col-sm-1 hidden-sm">&nbsp;</div>
-      <div class="col-12 col-sm-10 font-light">Our Site was created by 3 Naive Highschool boys as a Softwate Development Final Project.</div>
+      <div class="col-12 col-sm-10 font-light">Our Site was created by 3 Naive Highschool boys as a Software Development Final Project.</div>
       <div class="col-sm-1 hidden-sm">&nbsp;</div>
     </div><!-- /row -->
     <div class="row content-row">
