--- a/templates/home.html
+++ b/templates/home.html
@@ -70,16 +70,24 @@
       </div>
       {% endif %}
       <div class="col-12">
-	<h1 class="font-semibold">ERECTI <span class="font-thin">FIRE</span></h1>
+	<h1 class="font-semibold">RECTI <span class="font-thin">FIRE</span></h1>
 	<h4 class="font-thin">{% if s.logged %} Logged in as {{s.username}}{% else %}Please Log In{% endif %}<span class="font-semibold"></span></h4>
 	<br>
       </div><!-- /col-12 -->
     </div><!-- /row -->
+    {% if s.logged %}
     <div id="home-row-2" class="row clearfix">
-      <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4"><img src="{{url_for('static', filename='images/s02.png')}}"></div><span>Earn Tinder</span></div>
+      <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4">
+	  <a href="/edit">
+	    <img src="{{url_for('static', filename='images/s02.png')}}"></a>
+	</div><span>Earn Tinder</span></div>
       <div class="col-12 col-sm-4"></div>
-      <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5"><img src="{{url_for('static', filename='images/s03.png')}}"></div><span>Your Essays</span></div>
+      <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5">
+	  <a href="youressays">
+	    <img src="{{url_for('static', filename='images/s03.png')}}" href="/youressays"></a>
+	</div><span>Your Essays</span></div>
     </div><!-- /row -->
+    {% endif %}
   </div><!-- /container -->
 </div><!-- /slide1 -->
 
