assigning toEdit essay

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,6 +65,7 @@
 	<br>{{item}}
 	{% endfor %}-->
 	<br><button onClick="location.href='/youressays'">Your essays</button>
+	<br><button onClick="location.href='/edit'">Your essay to edit</button>
 	<br><button onClick="location.href='/logout'">Logout</button>
 	<h4 class="font-thin">{{error}}<span class="font-semibold"></span></h4>
       </div>
