--- a/templates/home.html
+++ b/templates/home.html
@@ -90,4 +90,51 @@
 </div><!-- /container -->
 </div><!-- /slide1 -->
 
+<!-- === Slide 4 - Process "The 'about' at the bottom" === -->
+<div class="slide story" id="slide-4" data-slide="4">
+  <div class="container">
+    <div class="row title-row">
+      <div class="col-12 font-thin">See us <span class="font-semibold">at work</span></div>
+    </div><!-- /row -->
+    <div class="row line-row">
+      <div class="hr">&nbsp;</div>
+    </div><!-- /row -->
+    <div class="row subtitle-row">
+      <div class="col-sm-1 hidden-sm">&nbsp;</div>
+      <div class="col-12 col-sm-10 font-light">Our Site was created by 3 Naive Highschool boys as a Software Development Final Project.</div>
+      <div class="col-sm-1 hidden-sm">&nbsp;</div>
+    </div><!-- /row -->
+    <div class="row content-row">
+      <div class="col-sm-1 hidden-sm">&nbsp;</div>
+      <div class="col-12 col-sm-2">
+	<p><i class="icon icon-bolt"></i></p>
+	<h2 class="font-thin">Listening to<br><span class="font-semibold" >your needs</span></h2>
+	<h4 class="font-thin">We created this website knowing that seniors around the country need to edit college essays.</h4>
+      </div><!-- /col12 -->
+      <div class="col-12 col-sm-2">
+	<p><i class="icon icon-cog"></i></p>
+	<h2 class="font-thin">Maintenance<br><span class="font-semibold">discovery</span></h2>
+	<h4 class="font-thin">If you find any bugs in our website, contact us and we will begin repairing them.</h4>
+      </div><!-- /col12 -->
+      <div class="col-12 col-sm-2">
+	<p><i class="icon icon-cloud"></i></p>
+	<h2 class="font-thin">Storming<br><span class="font-semibold">our brains</span></h2>
+	<h4 class="font-thin">This application is 100% in the cloud. that means if your hard drive malfunctions, there is no worry.</h4>
+      </div><!-- /col12 -->
+      <div class="col-12 col-sm-2">
+	<p><i class="icon icon-map-marker"></i></p>
+	<h2 class="font-thin">Getting<br><span class="font-semibold">there</span></h2>
+	<h4 class="font-thin">There is currently a small pool of users, but eventually, we will grow to cater more users. Please be patient.</h4>
+      </div><!-- /col12 -->
+      <div class="col-12 col-sm-2">
+	<p><i class="icon icon-gift"></i></p>
+	<h2 class="font-thin">Delivering<br><span class="font-semibold">the product</span></h2>
+	<h4 class="font-thin">Well, that is about all. Please try to enjoy all of the components of our application!</h4>
+      </div><!-- /col12 -->
+      <div class="col-sm-1 hidden-sm">&nbsp;</div>
+    </div><!-- /row -->
+  </div><!-- /container -->
+
+</div><!-- /Slide 6 -->
 {% endblock %}
+
