fixed missing essays

--- a/templates/editothers.html
+++ b/templates/editothers.html
@@ -55,4 +55,26 @@
   </div><!-- /container -->
 </div><!-- /slide1 -->
 
+<div class="slide story" id="slide-4" data-slide="4">
+  <div class="container">
+    <div class="row title-row">
+      <div class="col-12 font-thin">Edit <span class="font-semibold">your essays</span></div>
+    </div><!-- /row -->
+    <div class="row line-row">
+      <div class="hr">&nbsp;</div>
+    </div><!-- /row -->
+    <div class="row subtitle-row">
+      <div class="col-sm-1 hidden-sm">&nbsp;</div>
+      <div class="col-12 col-sm-10 font-light">
+	Edit other peoples essays and submit them for Tinder here!<br><br>
+	<iframe width="850" height="1200" src={{e}}></iframe>
+	<br>
+	<form action="/" method ="POST">
+	  <input type="submit" name="button" value="Submit">
+	</form>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
