--- a/templates/editothers.html
+++ b/templates/editothers.html
@@ -69,7 +69,7 @@
 	Edit other peoples essays and submit them for Tinder here!<br><br>
 	<iframe width="850" height="1200" src={{e}}></iframe>
 	<br>
-	<form action="/" method ="POST">
+	<form action= "/edit" method ="POST">
 	  <input type="submit" name="button" value="Submit">
 	</form>
       </div>
