--- a/templates/youressays.html
+++ b/templates/youressays.html
@@ -68,13 +68,24 @@
       <div class="col-sm-1 hidden-sm">&nbsp;</div>
       <div class="col-12 col-sm-10 font-light">
 	Edit other peoples essays and submit them for Tinder here!<br><br>
+	<h4 class="font-thin">{{m}}<span class="font-semibold"></span></h4>
 	{% for item in e %}
 	<iframe width="850" height="1200" src={{item}}></iframe>
 	<br>
 	{% endfor %}
+	{% if m != '' %}
 	<form action="/" method ="POST">
+	  How helpful was this edit?
+	  <select>
+	    <option value="1">1</option>
+	    <option value="2">2</option>
+	    <option value="3">3</option>
+	    <option value="4">4</option>
+	    <option value="5">5</option>
+	  </select>
 	  <input type="submit" name="button" value="Submit">
 	</form>
+	{% endif %}
       </div>
     </div>
   </div>
