--- a/templates/editothers.html
+++ b/templates/editothers.html
@@ -13,7 +13,7 @@
     <div class="nav-collapse collapse navbar-responsive-collapse">
       <ul class="nav row">
 	<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="Next Section"><span class="icon icon-home"></span> <span class="text">Home</span></a></li>
-	<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">View Your essays</span></a></li>
+	<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-fire"></span> <span class="text">Earn Tinder</span></a></li>
       </ul>
       <div class="row">
 	<div class="col-sm-2 active-menu"></div>
@@ -58,7 +58,7 @@
 <div class="slide story" id="slide-4" data-slide="4">
   <div class="container">
     <div class="row title-row">
-      <div class="col-12 font-thin">Edit <span class="font-semibold">your essays</span></div>
+      <div class="col-12 font-thin"><span class="font-semibold">Earn </span>Tinder</div>
     </div><!-- /row -->
     <div class="row line-row">
       <div class="hr">&nbsp;</div>
@@ -71,7 +71,9 @@
 	<iframe width="850" height="1200" src={{e}}></iframe>
 	<br>
 	<form action= "/edit" method ="POST">
+	<h4 class="font-thin">
 	  <input type="submit" name="button" value="Submit">
+	</h4>
 	</form>
 	{% endif %}
 	{% if box == False %}
