browse edit working

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -79,8 +79,8 @@
 	Edit this essay to earn Tinder!<br><br>
 	<iframe width="850" height="1200" src={{e}}></iframe>
 	<br>
-	<form action= "/" method ="POST">
-	   <input type="submit" name="button" value="Submit">
+	<form action= "/browse" method ="POST">
+	   <button name="button" value="Submit" type="submit">Submit</button>
 	</form>
 	{% endif %}
       </div>
