--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
       </div><span>Earn Tinder</span></div>
     <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="3">
 	<a href="logout">
-	  <img src="{{url_for('static', filename='images/s03.png')}}"></a></div><span>Logout</span></div>
+	  <img src="{{url_for('static', filename='images/s01.png')}}"></a></div><span></span></div>
     <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5">
 	<a href="youressays">
 	  <img src="{{url_for('static', filename='images/s03.png')}}" href="/youressays"></a>
